# lambda-pi

./: CHANGELOG.md  README.org  lambda-pi.cabal
app/: LambdaArrowMain.hs  Main.hs
src/: LambdaArrow.hs
test/: LambdaArrowSpec.hs  Main.hs
