cabal-version:      3.0

name:               lambda-pi

version:            0.1.0.0

synopsis:           An implementation of a dependently typed lambda calculus.

homepage:           https://github.com/shiva-tk/lambda-pi

license:            MIT

license-file:       LICENSE

author:             Shiva Tamil Kumaran

maintainer:         shivatk01@gmail.com

build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    hs-source-dirs:   src
    exposed-modules:  LambdaArrow
    build-depends:    base ^>=4.17.2.1, mtl, parsec
    default-language: Haskell2010

executable lambda-pi
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.17.2.1, lambda-pi
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite test
    type:           exitcode-stdio-1.0
    main-is:        Main.hs
    hs-source-dirs: test/
    ghc-options:    -threaded -rtsopts -with-rtsopts=-N
    other-modules:  LambdaArrowSpec
    build-depends:  base, hspec, lambda-pi
